# obsidian-publisher

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cog.toml
.github/workflows/: bump.yml  conventional-commits.yml  release.yml
src/: config.rs  export_source.rs  lib.rs  logging.rs  main.rs  markdown.rs  model.rs  preprocess.rs  watch.rs
tests/: dry_run_reporting.rs  sample_vault_snapshot.rs
tests/fixtures/sample_vault/: Graph.md  Home.md  Private.md
tests/fixtures/sample_vault/Projects/: Roadmap.md
tests/fixtures/sample_vault/Snippets/: Shared.md
tests/fixtures/sample_vault_expected/content/: Graph.md  Home.md  _index.md
tests/fixtures/sample_vault_expected/content/Projects/: Roadmap.md  _index.md
tests/fixtures/sample_vault_expected/content/Snippets/: Shared.md  _index.md
tests/fixtures/sample_vault_expected/static/: graph.json
