[package]
name = "obsidian-publisher"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"
description = "Obsidian vault to Zola static site preprocessor"
repository = "https://github.com/thethracian/obsidian-publisher"
homepage = "https://github.com/thethracian/obsidian-publisher"
keywords = ["obsidian", "zola", "static-site", "markdown", "preprocessor"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
notify = "8.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.15"
